# apps

./: .gitignore  CMakeLists.txt  README.md  build.sh  conftest.py  guidelines.md  neat-core.json  test.sh
examples/: CMakeLists.txt  TEMPLATE_README.md  conftest.py
examples/anomaly-detection/: CMakeLists.txt
examples/anomaly-detection/mae-medical-anomaly-detection/: README.md
examples/anomaly-detection/mae-medical-anomaly-detection/cpp/: CMakeLists.txt  main.cpp
examples/anomaly-detection/mae-medical-anomaly-detection/python/: main.py
examples/classification/: CMakeLists.txt
examples/classification/model_resnet50/: CMakeLists.txt  README.md  main.cpp
examples/classification/modelmpk_resnet50/: CMakeLists.txt  README.md
examples/classification/pipelinesession_resnet50/: CMakeLists.txt  README.md
examples/classification/simple-image-classification-pipeline/: CMakeLists.txt  README.md  main.cpp  main.py
examples/classification/simple-image-classification-pipeline/cpp/: CMakeLists.txt  main.cpp
examples/classification/simple-image-classification-pipeline/python/: main.py
examples/cpp/: CMakeLists.txt
examples/cpp/classification/: CMakeLists.txt
examples/cpp/classification/model_resnet50/: CMakeLists.txt  README.md
examples/cpp/classification/pipelinesession_resnet50/: main.cpp
examples/cpp/depth-estimation/midas_v21_rtsp/: main.cpp
examples/cpp/object-detection/: CMakeLists.txt
examples/cpp/object-detection/4PipesYOLOOptiview/: CMakeLists.txt
examples/cpp/object-detection/GraphPipesYOLOOptiview/: CMakeLists.txt
examples/cpp/object-detection/MultiCameraUDPYOLOv8/: CMakeLists.txt  main.cpp
examples/cpp/object-detection/yolov8_multi_rtsp_demo/: main.cpp
examples/cpp/semantic-segmentation/fcn_hrnet_seg_overlay/: CMakeLists.txt
examples/cpp/throughput/: CMakeLists.txt
examples/cpp/throughput/yolov8_coco_tput/: CMakeLists.txt
examples/depth-estimation/: CMakeLists.txt
examples/depth-estimation/depth_anything_v2/: CMakeLists.txt  README.md  main.cpp  main.py
examples/depth-estimation/live-rtsp-depth-estimation/: CMakeLists.txt  README.md  main.cpp  main.py
examples/depth-estimation/live-rtsp-depth-estimation/cpp/: CMakeLists.txt  main.cpp
examples/depth-estimation/live-rtsp-depth-estimation/python/: main.py
examples/depth-estimation/midas_v21_rtsp/: CMakeLists.txt  README.md  main.cpp  main.py
examples/depth-estimation/offline-depth-map-generation/: CMakeLists.txt  README.md  main.cpp
examples/depth-estimation/offline-depth-map-generation/cpp/: CMakeLists.txt
examples/depth-estimation/offline-depth-map-generation/python/: main.py
examples/depth-estimation/rtsp_depth_estimation/: CMakeLists.txt  README.md  main.cpp  main.py
examples/face-detection/: CMakeLists.txt
examples/face-detection/retinaface-face-detection/: README.md
examples/face-detection/retinaface-face-detection/cpp/: CMakeLists.txt  main.cpp
examples/face-detection/retinaface-face-detection/python/: CMakeLists.txt  main.py
examples/instance-segmentation/: CMakeLists.txt
examples/instance-segmentation/offline-instance-segmentation-overlay/: CMakeLists.txt  README.md
examples/instance-segmentation/offline-instance-segmentation-overlay/cpp/: CMakeLists.txt  main.cpp
examples/instance-segmentation/offline-instance-segmentation-overlay/python/: main.py
examples/instance-segmentation/simple-detess-segmentation-mask-overlay/: README.md
examples/instance-segmentation/simple-detess-segmentation-mask-overlay/cpp/: CMakeLists.txt  main.cpp
examples/instance-segmentation/simple-detess-segmentation-mask-overlay/python/: main.py
examples/instance-segmentation/yolov5_seg_overlay/: CMakeLists.txt  README.md
examples/instance-segmentation/yolov8n_seg_detess_simple/: CMakeLists.txt  README.md  main.py
examples/object-detection/: CMakeLists.txt
examples/object-detection/4PipesYOLOOptiview/: README.md  main.cpp
examples/object-detection/GraphPipesYOLOOptiview/: README.md  main.cpp
examples/object-detection/MultiCameraUDPYOLOv8/: README.md
examples/object-detection/OneCameraYOLOOptiview/: CMakeLists.txt  README.md  main.cpp
examples/object-detection/multi-camera-people-detection-and-tracking/: README.md
examples/object-detection/multi-camera-people-detection-and-tracking/common/: config.yaml
examples/object-detection/multi-camera-people-detection-and-tracking/cpp/: CMakeLists.txt  (+16 more)
examples/object-detection/multistream-rtsp-detection-pipeline/: CMakeLists.txt  README.md  main.cpp  main.py
examples/object-detection/simple-object-detection-overlay-pipeline/: CMakeLists.txt  README.md  main.cpp  main.py
examples/object-detection/single-rtsp-object-detection-optiview/: CMakeLists.txt  README.md  main.cpp  main.py
examples/object-detection/yolov8_multi_rtsp_demo/: CMakeLists.txt  README.md  main.cpp  main.py
examples/object-detection/yolov8_one_rtsp_optiview/: CMakeLists.txt  README.md  main.cpp
examples/object-detection/yolov8_simple_detection_pipeline/: CMakeLists.txt  README.md  main.cpp  main.py
examples/python/: README.md
examples/re-identification/simple-re-identification-pipeline/: README.md
examples/semantic-segmentation/: CMakeLists.txt
examples/semantic-segmentation/fcn_hrnet_seg_overlay/: README.md  main.py
examples/semantic-segmentation/simple-detess-segmentation-mask-overlay/: CMakeLists.txt  README.md  main.cpp
examples/semantic-segmentation/simple-semantic-segmentation-overlay-pipeline/: CMakeLists.txt  README.md
examples/semantic-segmentation/yolov5_seg_overlay/: README.md  main.py
examples/throughput/yolov8_coco_tput/: README.md  main.cpp
examples/tracking/: CMakeLists.txt
examples/tracking/multi-camera-people-detection-and-tracking-optiview/: README.md
support/: CMakeLists.txt
support/object_detection/: obj_detection_utils.cpp
support/optiview/: graphpipes_optiview_helpers.cpp  graphpipes_optiview_helpers.h
support/runtime/: asset_utils.cpp  asset_utils.h  example_utils.cpp  example_utils.h
support/testing/: optiview_json_listener.cpp  optiview_json_listener.h  test_process.cpp  test_process.h
(+202 files in other folders)
